<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/speech"
    android:visibility="gone"
    tools:visibility="visible">
    <ImageView
        android:id="@+id/speaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/karl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <ImageView
        android:id="@+id/speechBubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/speech_bubble"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/speaker"/>
    <TextView
        android:id="@+id/speakerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/karl"
        android:textSize="@dimen/textSize"
        android:fontFamily="@font/unispace"
        android:textColor="@color/blue"
        app:layout_constraintTop_toTopOf="@id/speechBubble"
        app:layout_constraintLeft_toLeftOf="@+id/speechBubble"
        android:layout_marginLeft="@dimen/marginSpeech"
        android:layout_marginTop="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap"
        android:textSize="@dimen/textSize"
        android:fontFamily="@font/unispace"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/speechBubble"
        app:layout_constraintRight_toRightOf="@+id/speechBubble"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/intro"
        android:textSize="@dimen/textSize"
        android:fontFamily="@font/unispace"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/speakerName"
        app:layout_constraintRight_toRightOf="@id/speechBubble"
        app:layout_constraintTop_toBottomOf="@id/speakerName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>