<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dialog_border">
    <ImageView
        android:id="@+id/swordIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sword_death_icon"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/healthIcon"/>
    <ImageView
        android:id="@+id/healthIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/health_death_icon"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintStart_toEndOf="@id/swordIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/swordIcon"/>
    <TextView
        android:id="@+id/attackLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attack"
        android:fontFamily="@font/unispace"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/swordIcon"
        app:layout_constraintStart_toStartOf="@id/swordIcon"
        app:layout_constraintEnd_toEndOf="@id/swordIcon"/>
    <TextView
        android:id="@+id/healthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health"
        android:fontFamily="@font/unispace"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/healthIcon"
        app:layout_constraintStart_toStartOf="@id/healthIcon"
        app:layout_constraintEnd_toEndOf="@id/healthIcon"/>
    <TextView
        android:id="@+id/attackVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="16"
        android:fontFamily="@font/unispace"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/attackLabel"
        app:layout_constraintStart_toStartOf="@id/attackLabel"
        app:layout_constraintEnd_toEndOf="@id/attackLabel"/>
    <TextView
        android:id="@+id/healthVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="16"
        android:fontFamily="@font/unispace"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/healthLabel"
        app:layout_constraintStart_toStartOf="@id/healthLabel"
        app:layout_constraintEnd_toEndOf="@id/healthLabel"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/zombie_heart"
        app:layout_constraintTop_toTopOf="@id/attackCost"
        app:layout_constraintBottom_toBottomOf="@id/attackCost"
        app:layout_constraintEnd_toStartOf="@id/attackCost"
        android:layout_marginHorizontal="8dp"/>
    <TextView
        android:id="@+id/attackCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="16"
        android:fontFamily="@font/unispace"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/attackVal"
        app:layout_constraintStart_toStartOf="@id/attackVal"
        app:layout_constraintEnd_toEndOf="@id/attackVal" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/zombie_heart"
        app:layout_constraintTop_toTopOf="@id/healthCost"
        app:layout_constraintBottom_toBottomOf="@id/healthCost"
        app:layout_constraintEnd_toStartOf="@id/healthCost"
        android:layout_marginHorizontal="8dp"/>
    <TextView
        android:id="@+id/healthCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="16"
        android:fontFamily="@font/unispace"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/healthVal"
        app:layout_constraintStart_toStartOf="@id/healthVal"
        app:layout_constraintEnd_toEndOf="@id/healthVal" />
    <Button
        android:id="@+id/tryAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:fontFamily="@font/unispace"
        android:textColor="@color/white"
        android:background="@drawable/small_menu_border"
        android:layout_marginVertical="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/healthCost"/>
</androidx.constraintlayout.widget.ConstraintLayout>